--- a/dictionary_fields.yml
+++ b/dictionary_fields.yml
@@ -2368,6 +2368,14 @@
     msg: Above maximum value
     response: drop_record
 -
+  fname: white
+  sqltype: tinyint
+  varlab: White ethnicity
+  tablerowlabel:
+    latex: "White ethnicity"
+  vallab: *label_truefalse
+  source: CMPD
+-
   fname: pmhmi
   sqltype: char
   varlab: Myocardial Infarction
@@ -3317,12 +3325,12 @@
     H: in-hospital CPR
     C: community CPR
     N: No CPR
-  origin: CMPD
+  source: CMPD
 -
   fname: loca
   sqltype: char
   sqllen: 1
-  origin: CMPD
+  source: CMPD
   varlab: location directly prior to admission
   vallab: &label_cmpd_locations
     W: Ward
@@ -3345,7 +3353,7 @@
   fname: ploca
   sqltype: char
   sqllen: 1
-  origin: CMPD
+  source: CMPD
   varlab: location indirectly prior to admission
   vallab: *label_cmpd_locations
   notes: |
@@ -3354,7 +3362,7 @@
   fname: hloca
   sqltype: char
   sqllen: 1
-  origin: CMPD
+  source: CMPD
   varlab: hospital housing non-transient location in
   vallab: &label_cmpd_hospital
     S: same hospital
@@ -3364,7 +3372,7 @@
   fname: htloca
   sqltype: char
   sqllen: 1
-  origin: CMPD
+  source: CMPD
   varlab: hospital housing transient location in
   vallab: *label_cmpd_hospital
 -
@@ -3372,7 +3380,7 @@
   sqltype: char
   sqllen: 1
   varlab: CMPD surgical classification
-  origin: CMPD
+  source: CMPD
   vallab:
     M: emergency
     U: urgent
@@ -3381,13 +3389,13 @@
 -
   fname: tuidi
   sqltype: smallint
-  origin: CMPD
+  source: CMPD
   varlab: transferring unit identifier in
 -
   fname: typeiha
   sqltype: char
   sqllen: 1
-  origin: CMPD
+  source: CMPD
   varlab: type of adult ICU/HDU in
   vallab: &label_cmpd_unit_type
     g: general
@@ -3405,7 +3413,7 @@
   fname: pa_v3
   sqltype: char
   sqllen: 1
-  origin: CMPD
+  source: CMPD
   varlab: Critical care admission type
   vallab:
     L: unplanned local admission
@@ -3417,7 +3425,7 @@
 -
   fname: status
   sqltype: tinyint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD data status
   valias: {New: 0, Dirty: 1, Validation: 2, Deactivated: 3, Clean: 4}
   vallab:
@@ -3429,49 +3437,58 @@
 -
   fname: withinsh
   sqltype: tinyint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD re-admission within same hospital stay
   vallab: *label_truefalse
 -
   fname: yusurv
   sqltype: tinyint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD unit survival
   vallab: *label_truefalse
 -
   fname: yhsurv
   sqltype: tinyint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD hospital survival
   vallab: *label_truefalse
 -
   fname: ahsurv
   sqltype: tinyint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD ultimate hospital survival
   vallab: *label_truefalse
 -
   fname: yulos
   sqltype: float
-  origin: CMPD
+  source: CMPD
   varlab: CMPD unit length of stay
   units: hours
 -
+  fname: yulosd
+  sqltype: float
+  source: CMPD
+  varlab: CMPD unit length of stay
+  tablerowlabel:
+    latex: "ICU length of stay"
+  unitlabel:
+    latex: days
+-
   fname: yhlos
   sqltype: smallint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD hospital length of stay
   units: days
 -
   fname: yhlosa
   sqltype: smallint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD hospital length of stay after ICU discharge
   units: days
 -
   fname: yhlosb
   sqltype: smallint
-  origin: CMPD
+  source: CMPD
   varlab: CMPD hospital length of stay before ICU admission
   units: days
 -
@@ -3521,7 +3538,7 @@
   sqltype: char
   sqllen: 12
   varlab: unit type
-  origin: CMPD
+  source: CMPD
 -
   fname: heads_count
   sqltype: smallint
@@ -4792,7 +4809,9 @@
 -
   fname: icu_delay
   sqltype: tinyint
-  varlab: Timely admission to ICU
+  varlab: Delayed admission to ICU
+  tablerowlabel:
+    latex: Delayed admission to critical care
   source: CMPD
   talias: {tailsfinal: tnessa}
   valias: {T: 0, D: 1}
@@ -4884,16 +4903,32 @@
   fname: dead_icu
   sqltype: tinyint
   varlab: ICU death
+  tablerowlabel:
+    latex: Critical care mortality
   source: CMPD
   talias: {tailsfinal: dis, tailsmini: dis}
   valias: {A: 0, D: 1}
-  vallab: *label_truefalse
+  vallab: &label_deadalive
+    0: Alive
+    1: Dead
   checks:
   -
     type: legal_vals
     value: [0,1]
     msg: Illegal response
     response: drop_record
+-
+  fname: dead28
+  sqltype: tinyint
+  tablerowlabel:
+    latex: "28 day mortality"
+  vallab: *label_deadalive
+-
+  fname: dead90
+  sqltype: tinyint
+  tablerowlabel:
+    latex: "90 day mortality"
+  vallab: *label_deadalive
 -
   fname: icu_admit
   sqltype: timestamp
@@ -5552,6 +5587,8 @@
 -
   fname: icu_recommend
   sqltype: tinyint
+  talias:
+    propensity_balance: cc_recommend
   tablerowlabel:
     latex: "Level 2 or 3 - recommended"
   source: stata_derived
@@ -5665,4 +5702,219 @@
   notes: |
     - censored at 12 hours
     - counting back from ward visit timestamp
-
+-
+  fname: temp2
+  sqltype: float
+  tablerowlabel:
+    latex: Temperature
+  unitlabel:
+    latex: "{\\textdegree}C"
+  stataformat: "%9.1f"
+-
+  fname: wcc2
+  sqltype: float
+  tablerowlabel:
+    latex: White cell count
+  unitlabel:
+    latex: "{\\texttimes}10\\textsuperscript{9}l \\textsuperscript{-1}"
+  stataformat: "%9.1f"
+-
+  fname: hr2
+  sqltype: float
+  tablerowlabel:
+    latex: Heart rate
+  unitlabel:
+    latex: "min\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: bps2
+  sqltype: float
+  tablerowlabel:
+    latex: Systolic BP
+  unitlabel:
+    latex: "mmHg"
+  stataformat: "%9.0f"
+-
+  fname: ph2
+  sqltype: float
+  tablerowlabel:
+    latex: pH
+  stataformat: "%9.2f"
+-
+  fname: lac2
+  sqltype: float
+  tablerowlabel:
+    latex: Lactate
+  unitlabel:
+    latex: "mmol l\\textsuperscript{-1}"
+  stataformat: "%9.1f"
+-
+  fname: rr2
+  sqltype: float
+  tablerowlabel:
+    latex: Respiratory rate
+  unitlabel:
+    latex: "min\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: pf2
+  sqltype: float
+  tablerowlabel:
+    latex: P:F ratio
+  unitlabel:
+    latex: "kPa"
+  stataformat: "%9.1f"
+-
+  fname: na2
+  sqltype: float
+  tablerowlabel:
+    latex: Sodium
+  units: mmol / l
+  unitlabel:
+    latex: "mmol l\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: urea2
+  sqltype: float
+  tablerowlabel:
+    latex: Urea
+  unitlabel:
+    latex: "mmol l\\textsuperscript{-1}"
+  stataformat: "%9.1f"
+-
+  fname: cr2
+  sqltype: float
+  tablerowlabel:
+    latex: Creatinine
+  unitlabel:
+    latex: "\\textgreek{m}mol l\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: urin2
+  sqltype: float
+  tablerowlabel:
+    latex: Urine volume
+  unitlabel:
+    latex: "mls hr\\textsuperscript{-1}"
+  stataformat: "%9.0fc"
+-
+  fname: gcs2
+  sqltype: tinyint
+  tablerowlabel:
+    latex: Glasgow Coma Score
+-
+  fname: plat2
+  sqltype: smallint
+  tablerowlabel:
+    latex: Platelets
+  unitlabel:
+    latex: "{\\texttimes}10\\textsuperscript{9}l \\textsuperscript{-1}"
+  units: x10e9
+-
+  fname: temp1
+  sqltype: float
+  tablerowlabel:
+    latex: Temperature
+  unitlabel:
+    latex: "{\\textdegree}C"
+  stataformat: "%9.1f"
+-
+  fname: wcc1
+  sqltype: float
+  tablerowlabel:
+    latex: White cell count
+  unitlabel:
+    latex: "{\\texttimes}10\\textsuperscript{9}l \\textsuperscript{-1}"
+  stataformat: "%9.1f"
+-
+  fname: hr1
+  sqltype: float
+  tablerowlabel:
+    latex: Heart rate
+  unitlabel:
+    latex: "min\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: bps1
+  sqltype: float
+  tablerowlabel:
+    latex: Systolic BP
+  unitlabel:
+    latex: "mmHg"
+  stataformat: "%9.0f"
+-
+  fname: ph1
+  sqltype: float
+  tablerowlabel:
+    latex: pH
+  stataformat: "%9.2f"
+-
+  fname: lac1
+  sqltype: float
+  tablerowlabel:
+    latex: Lactate
+  unitlabel:
+    latex: "mmol l\\textsuperscript{-1}"
+  stataformat: "%9.1f"
+-
+  fname: rr1
+  sqltype: float
+  tablerowlabel:
+    latex: Respiratory rate
+  unitlabel:
+    latex: "min\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: pf1
+  sqltype: float
+  tablerowlabel:
+    latex: P:F ratio
+  unitlabel:
+    latex: "kPa"
+  stataformat: "%9.1f"
+-
+  fname: na1
+  sqltype: float
+  tablerowlabel:
+    latex: Sodium
+  units: mmol / l
+  unitlabel:
+    latex: "mmol l\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: urea1
+  sqltype: float
+  tablerowlabel:
+    latex: Urea
+  unitlabel:
+    latex: "mmol l\\textsuperscript{-1}"
+  stataformat: "%9.1f"
+-
+  fname: cr1
+  sqltype: float
+  tablerowlabel:
+    latex: Creatinine
+  unitlabel:
+    latex: "\\textgreek{m}mol l\\textsuperscript{-1}"
+  stataformat: "%9.0f"
+-
+  fname: urin1
+  sqltype: float
+  tablerowlabel:
+    latex: Urine volume
+  unitlabel:
+    latex: "mls hr\\textsuperscript{-1}"
+  stataformat: "%9.0fc"
+-
+  fname: gcs1
+  sqltype: tinyint
+  tablerowlabel:
+    latex: Glasgow Coma Score
+-
+  fname: plat1
+  sqltype: smallint
+  tablerowlabel:
+    latex: Platelets
+  unitlabel:
+    latex: "{\\texttimes}10\\textsuperscript{9}l \\textsuperscript{-1}"
+  units: x10e9
