--- a/lib_phd/dictionary_tables.yml
+++ b/lib_phd/dictionary_tables.yml
@@ -155,6 +155,23 @@
     - dateabx1
     - timeabxb1
     - diagmicro
+    - initials
+    - ainitials
+    - chemodatestart
+    - chemodatestop
+    - neutrodatestart
+    - lymph2
+    - lymphstatus
+    - leuk
+    - leukstatus
+    - myeloma
+    - myelomastatus
+    - rxline
+    - rxtype
+    - immunocyclosporin
+    - immunoseptrin
+    - recentsepsis
+    - recentchemo
   derivedfields: []
   pkey: [sitecode, spotidno] # list of fields
   sitekey: sitecode
@@ -186,6 +203,16 @@
     - creatinine
     - urea
     - bili
+    - initials
+    - cxr_dt
+    - ainitials
+    - lab_date
+    - neutrophils
+    - hb
+    - crp
+    - alb
+    - ldh
+    - bldculture
   essentialfields:
   - sitecode
   - spotidno
@@ -274,6 +301,15 @@
     - limits
     - uvold
     - fluidin
+    - studyday
+    - ainitials
+    - inccu
+    - sepsis
+    - sepsis_site
+    - diarrhoea
+    - txred
+    - mucositis
+    - weight
   essentialfields:
     - sitecode
     - spotidno
@@ -315,6 +351,7 @@
     TableVisit as entered by Abacus
   talias:
     - tablevisit
+    - dailyassessment
 
 #  ====================================================
 #  = idlong -  all time sensitive data from (SPOT)id =
@@ -690,11 +727,16 @@
     - spotidno
     - patientid
     - tablepatientnotes
+    - notes-idlabuch
+    - dailyassessmentnotes
   essentialfields:
     - sitecode
     - spotidno
   talias:
     - tablepatientnotes
+    - tablenotes
+    - notesidlabuch
+    - dailyassessstudydaynotes
 
 #  ==========================
 #  = lab crf notes - spotid =
@@ -757,6 +799,10 @@
     - ft4
     - ft3
     - tsh
+    - ainitials
+    - smpserumcount
+    - smpedtacount
+    - smpbuffy
   essentialfields:
     - v_date
     - v_time
@@ -764,6 +810,7 @@
     - spotidno
   talias:
     - biologicalsamplinguclh
+    - biologicalsampling
 -
   tablename: mortality_uclh
   type: primary
@@ -2160,4 +2207,67 @@
     FROM tailsmini_ix
   postflight:
   notes:
+
+#  ========================================
+#  = antimicrobial data -  for (SPOT)id =
+#  ========================================
+-
+  tablename: antimicrobialflowchart
+  type: primary
+  sourcefields:
+    - sitecode
+    - spotidno
+    - patientid
+    - cxrdt
+    - ainitials
+    - lab_date
+    - abx1
+    - abx2
+    - abx3
+    - abx4
+    - abx5
+    - abx6
+    - rxroids2
+    - gmcsf
+  essentialfields:
+  - sitecode
+  - spotidno
+  derivedfields: []
+  pkey: [sitecode, spotidno]
+  sitekey: sitecode
+  chks:
+
+#  ========================================
+#  = micro summary data -  for (SPOT)id =
+#  ========================================
+-
+  tablename: micrbiologysummary
+  type: primary
+  sourcefields:
+    - sitecode
+    - spotidno
+    - patientid
+    - ainitials
+    - v_sampledate
+    - microblood
+    - microsputum
+    - microurine
+    - microtap
+    - microline
+    - microwound
+    - diagmicro
+    - microres1
+    - microres2
+    - microres3
+    - microres4
+    - microres5   
+  essentialfields:
+  - sitecode
+  - spotidno
+  derivedfields: []
+  pkey: [sitecode, spotidno]
+  sitekey: sitecode
+  chks:
+ 
+
 
